Fix bug with footer not aligning

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,7 +88,8 @@ code {
 .tooltip {
   position: absolute;
   text-align: center;
-  
+  top:0px;
+  left:0px;
   padding: 2px;
   background: black;
   border: 0px;
